add endpoints to power home screen
